[gd_scene load_steps=20 format=3 uid="uid://cbvnws21jha45"]

[ext_resource type="Script" path="res://6.gd" id="2_sa5dh"]
[ext_resource type="Script" path="res://playermovement.gd" id="2_ye60e"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_diidr"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_bry4a"]
sky_material = SubResource("ProceduralSkyMaterial_diidr")

[sub_resource type="Environment" id="Environment_6w87g"]
background_mode = 2
sky = SubResource("Sky_bry4a")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eb6pu"]
albedo_color = Color(0.486275, 0.988235, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_g1hl1"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_eprg3"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SphereShape3D" id="SphereShape3D_aogy2"]
radius = 0.3

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nsb4f"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0efni"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxShape3D" id="BoxShape3D_cinjw"]
size = Vector3(0.829737, 1.22015, 0.763983)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ejavl"]
albedo_color = Color(0.160784, 0.364706, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_grx5o"]
albedo_color = Color(0.928299, 0.448908, 0.52497, 1)

[sub_resource type="Animation" id="Animation_g6n0p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody3D/MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody3D/MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.3, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RigidBody3D/CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.30042, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RigidBody3D/CollisionShape3D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RigidBody3D/Head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.77355, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CharacterBody3D/RigidBody3D/CrouchCheck:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.0346, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RigidBody3D/Head:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0h2cp"]
resource_name = "crouch"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody3D/MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody3D/MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.3, 0), Vector3(0, 0.7, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RigidBody3D/CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.30042, 0), Vector3(0, 0.7, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RigidBody3D/CollisionShape3D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RigidBody3D/Head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.77355, 0), Vector3(0, 0.887, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CharacterBody3D/RigidBody3D/CrouchCheck:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2.0346, 0), Vector3(0, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RigidBody3D/Head:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bk5mk"]
_data = {
"RESET": SubResource("Animation_g6n0p"),
"crouch": SubResource("Animation_0h2cp")
}

[sub_resource type="BoxMesh" id="BoxMesh_7rjc3"]
size = Vector3(3, 0.5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_bhbir"]
size = Vector3(3, 0.5, 3)

[node name="World" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6w87g")

[node name="floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999868, 0.0162483, 0, -0.0162483, 0.999868, -23.9802, -0.515534, -6.44854)
use_collision = true
collision_layer = 65535
size = Vector3(65.768, 0.343994, 22.641)
material = SubResource("StandardMaterial3D_eb6pu")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.476412, -3.51332)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30042, 0)
mesh = SubResource("CapsuleMesh_g1hl1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("ConvexPolygonShape3D_eprg3")

[node name="CoyoteTimer" type="Timer" parent="CharacterBody3D"]
wait_time = 0.15
one_shot = true

[node name="RigidBody3D" type="RigidBody3D" parent="CharacterBody3D"]

[node name="CrouchCheck" type="CollisionShape3D" parent="CharacterBody3D/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0346, 0)
shape = SubResource("SphereShape3D_aogy2")

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.2508, 0.470425, -0.00660539)
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_nsb4f")
lock_rotation = true
script = ExtResource("2_ye60e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
mesh = SubResource("CapsuleMesh_g1hl1")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30042, 0)
shape = SubResource("ConvexPolygonShape3D_0efni")

[node name="Head" type="Node3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.77355, 0)

[node name="Camera3D" type="Camera3D" parent="RigidBody3D/Head"]

[node name="back" type="Area3D" parent="RigidBody3D/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.500042, 0, 0.923063)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D/Head/back"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.338696, -0.50481, -0.306561)
shape = SubResource("BoxShape3D_cinjw")

[node name="front" type="Area3D" parent="RigidBody3D/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.32116)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D/Head/front"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0404606, -0.53601, 1.05139)
shape = SubResource("BoxShape3D_cinjw")

[node name="left" type="Area3D" parent="RigidBody3D/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.01632)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D/Head/left"]
transform = Transform3D(-0.113862, 0, -0.993497, 0, 1, 0, 0.993497, 0, -0.113862, -0.596364, -0.460999, -1.02789)
shape = SubResource("BoxShape3D_cinjw")

[node name="right" type="Area3D" parent="RigidBody3D/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00597668, 0, 1.0124)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D/Head/right"]
transform = Transform3D(-0.0725071, 0, 0.997368, 0, 1, 0, -0.997368, 0, -0.0725071, 0.295635, -0.36557, -1.01651)
shape = SubResource("BoxShape3D_cinjw")

[node name="CoyoteTimer" type="Timer" parent="RigidBody3D"]
wait_time = 0.15
one_shot = true

[node name="RayCast3D" type="RayCast3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.889945, -0.0274236)

[node name="upboy" type="RayCast3D" parent="RigidBody3D"]
transform = Transform3D(-0.999999, 0.00116938, 0, -0.00116938, -0.999999, 0, 0, 0, 1, -0.0438805, 1.42183, 0.00504364)

[node name="Node3D" type="Node3D" parent="."]

[node name="2" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.1139, 2.28109, -7.08862)
use_collision = true
size = Vector3(3.58864, 6.75793, 30.4995)

[node name="3" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(-0.0444215, 0, 0.999013, 0, 1, 0, -0.999013, 0, -0.0444215, -30.7376, 2.21398, 6.52423)
use_collision = true
size = Vector3(3.58864, 6.75793, 74.6262)
material = SubResource("StandardMaterial3D_ejavl")

[node name="4" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56.174, 2.14577, -7.0194)
use_collision = true
size = Vector3(3.58864, 6.75793, 30.4995)

[node name="5" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(-0.0444215, 0, 0.999013, 0, 1, 0, -0.999013, 0, -0.0444215, -27.5135, 2.21398, -17.9387)
use_collision = true
size = Vector3(3.58864, 6.75793, 68.1716)

[node name="7" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(-0.932689, 0.360681, 0, -0.360681, -0.932689, 0, 0, 0, 1, -29.3087, 1.22862, -11.5117)
use_collision = true
size = Vector3(17.7816, 3.64517, 3.03436)

[node name="8" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.3753, 0.724147, -2.09658)
use_collision = true
size = Vector3(5.3027, 3.6684, 3.03436)

[node name="rrr" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.2709, 3.68393, -6.78039)
use_collision = true
size = Vector3(5.3027, 0.875305, 3.03436)
material = SubResource("StandardMaterial3D_grx5o")
script = ExtResource("2_sa5dh")

[node name="Area3D" type="Area3D" parent="Node3D/rrr"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0827293, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bk5mk")
}

[node name="StaticBody3D" type="StaticBody3D" parent="AnimationPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.301375, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="AnimationPlayer/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.74544, 2.12128, 0.152058)
mesh = SubResource("BoxMesh_7rjc3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AnimationPlayer/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.74544, 2.12128, 0.152058)
shape = SubResource("BoxShape3D_bhbir")

[connection signal="body_entered" from="CharacterBody3D/RigidBody3D" to="RigidBody3D" method="_on_rigid_body_3d_body_entered"]
[connection signal="body_exited" from="CharacterBody3D/RigidBody3D" to="RigidBody3D" method="_on_rigid_body_3d_body_exited"]
[connection signal="body_shape_entered" from="RigidBody3D/Head/back" to="RigidBody3D" method="_on_back_body_shape_entered"]
[connection signal="body_shape_exited" from="RigidBody3D/Head/back" to="RigidBody3D" method="_on_back_body_shape_exited"]
[connection signal="body_shape_entered" from="RigidBody3D/Head/front" to="RigidBody3D" method="_on_front_body_shape_entered"]
[connection signal="body_shape_exited" from="RigidBody3D/Head/front" to="RigidBody3D" method="_on_front_body_shape_exited"]
[connection signal="body_shape_entered" from="RigidBody3D/Head/left" to="RigidBody3D" method="_on_left_body_shape_entered"]
[connection signal="body_shape_exited" from="RigidBody3D/Head/left" to="RigidBody3D" method="_on_left_body_shape_exited"]
[connection signal="body_shape_entered" from="RigidBody3D/Head/right" to="RigidBody3D" method="_on_right_body_shape_entered"]
[connection signal="body_shape_exited" from="RigidBody3D/Head/right" to="RigidBody3D" method="_on_right_body_shape_exited"]
